# crowe-sense

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: mesh-config.example.json
docs/: 01-system-architecture.md  02-mechanical-design.md  03-electronics-integration.md  04-firmware-architecture.md  05-assembly-guide.md  ARCHITECTURE.md  QUICKSTART.md
examples/: basic_mesh_node.py
firmware/: README.md  pyproject.toml
firmware/config/: node.toml.example
firmware/crowe/: __init__.py  config.py  db.py  health.py  provision.py  routing.py  sampler.py  storage.py  uploader.py  watchdog.py
firmware/crowe/sensors/: __init__.py  base.py  bme688.py  scd41.py  sht45.py  veml7700.py
firmware/systemd/: crowe-health.service  crowe-health.timer  crowe-sampler.service  crowe-uploader.service  crowe-watchdog.service
firmware/tests/: conftest.py  test_config.py  test_db.py  test_provision.py  test_routing.py  test_sensors.py  test_storage.py  test_uploader.py
hardware/: bom.csv
hardware/enclosure/: README.md  crowe_sensor_enclosure.scad
hardware/pinouts/: sensor_pinout.md
src/: __init__.py
src/offgrid_mesh/: __init__.py  ble_transport.py  cli.py  ephemeral_ids.py  mesh_node.py  utils.py
tests/: test_ephemeral_ids.py  test_mesh_node.py
