[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowe-sense"
version = "0.1.0"
description = "Firmware for the Crowe Sensor environmental monitoring node"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Crowe Sense" }]

dependencies = [
    "smbus2>=0.4.3",
    "gpiozero>=2.0",
    "cryptography>=42",
    "httpx>=0.27",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
crowe-sampler   = "crowe.sampler:main"
crowe-uploader  = "crowe.uploader:main"
crowe-watchdog  = "crowe.watchdog:main"
crowe-health    = "crowe.health:main"
crowe-provision = "crowe.provision:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["crowe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
